# Angelfish-2

./: LICENSE  README.md
backend/: .env  .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-0b59fdb918abfeaa6f353e81dd05d722e65cb9d4767c75bcbef09f804397ef7e.json  query-0f8370b430723700c7908d717391bb8942a930384f45794c260d10ca735b27cb.json  query-1343c1e8503e90c4ad51089238fad61e5ed603a3f3f210b9fa3c15a7b1d23626.json  query-16eba780898a4b7e7ed724408006be1298ba888db22fe7005cb30a8adc13ba7a.json  query-1a4858ac1e1ac8c7af4d2f298ed990e1a9de1fd418619a2f44fcd2ca0ef77878.json  query-2043cd93ca10296395f7f102b7b2ca76af3b977318b4c5d12cdd6514ecb8b322.json  query-28640092fb1c35e1f8cb1d963b8f1b6f400f0ff91946bfeba0faf6751962395c.json  query-3387e36715b28cc8e0597b4b53d24de7ee90f0d9296f810141dbc5f569a100e8.json  query-5e1a5386520fe5971eb9aa4e7687e9ba41f9f8ccb5f93350a389a3c98c6e1c12.json  query-719003676b166ae0b5c4ea3d59625b44041e0e82004311aa062d34a950ab8a3d.json  query-80e8a016214d8267193774508eceac7344f402122f04dcc6c7066a4fbcec11cc.json  query-843459f546fce57b56c5a5f8918c6d7f877c35f5ae7e6bebca3102f6282020ae.json  query-942aea522385a831d120229dc223c67c2d44a660f9f8ff655a56c4ffd033cf4c.json  query-a0342c59bbf3d34c43e60417ba8d821271ec186112f90adc319e2a708883cab8.json  query-aa618bd4b4ff3c7450ef16f091cda328e387bb68bf751fc07acbcf68ede1736a.json  query-ab6354992ade9aa57a2a4e5a53540ad03231a00ecd692922b35bf944ff75e735.json  query-b48ec794cdbadeac6e9b6bc5d597cc8e98b7e53cdff154f7a42368660320a3f9.json  query-c7642401349ee5737602fa446370d867d8cfef7c90b5c0c1a8ed59d2db09fc90.json  query-cce2c7ca0e93195e89bd58d2e5472c022ce8ca116ffee4c37d48beb08768a8f3.json  query-dc8436c9eaf318ede492de0c33aeaa0be5dec3a5fd726b473a06758779e88014.json  query-e0dda083cfc1d6721e733913d61d7307ffef145e9eb95a71953b115c6eca7899.json  query-efd88e5c6650851eaf36e2ce832d8c697bed6b3ca612d47c6022df435dd56e8a.json
backend/migrations/: 20240318064454_initial.sql  20240326154851_unique.sql  20240326161403_not_null_room_category.sql  20240326163653_rename_allowed_entity_to_permission.sql  20240326163914_rename_persion_id_to_uuid.sql  20240326173349_rename_persion_id_to_uuid2.sql  20240406062000_passwords.sql  20240406065208_role_passwd.sql  20240408075849_phone.sql  (+2 more)
(+70 files in other folders)
