[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "time", "uuid"] }
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["serde", "rng", "v4"] }
