[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.4", features = ["macros"] }
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "time", "uuid"] }
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
tower-sessions = "0.12.1"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.7.0", features = ["serde", "rng", "v4"] }
